--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Import with core dependencies 2
         if: ${{ env.run_tests == 'true' && success()}}
         run: |
+          source .venv/bin/activate
           python -c "import laktory; print(laktory.__version__)" 
 
       - name: Import with core dependencies 3
