--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
           version: "0.5.14"
           python-version: ${{ matrix.python-version }}
 
-      - name: Import with core dependencies
+      - name: Install and Import with core dependencies only
         if: ${{ env.run_tests == 'true' && success()}}
         run: |
           make install 
