--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -21,4 +21,7 @@ jobs:
           version: "0.5.14"
 
       - name: Publish doc
-        run: make publishdoc
+        run: |
+          uv venv
+          source .venv/bin/activate
+          make publishdoc
