--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -15,5 +15,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.14"
+
       - name: Publish doc
-        run: make publishdoc
+        run: |
+          uv venv
+          source .venv/bin/activate
+          make publishdoc
