--- a/tests/data/stack.yaml
+++ b/tests/data/stack.yaml
@@ -53,10 +53,7 @@ resources:
                 package: yfinance
         - task_key: run-pipeline
           pipeline_task:
-            pipeline_id: ${resources.dlt-custom-name.id}  # LAKTORY STYLE
-#            pipeline_id: ${resources.dltpipelines.pl-custom-name.id}  # BUNDLES STYLE
-#            pipeline_id: ${databricks_pipeline.pl-custom-name.id}  # TERRAFORM STYLE
-#            pipeline_id: ${pl-custom-name.id}  # PULUMI STYLE
+            pipeline_id: ${resources.dlt-custom-name.id}
 
     job-disabled:
         name: job-disabled
