--- a/tests/data/yaml_loader/stocks_others_with_vars.yaml
+++ b/tests/data/yaml_loader/stocks_others_with_vars.yaml
@@ -1,10 +1,10 @@
 - name: google
   symbol: GOOGL
-  prices: !inject ${vars.symbol}_prices.yaml
-  <<: !merge common.yaml
+  prices: !use ${vars.symbol}_prices.yaml
+  <<: !update common.yaml
   variables:
     symbol: googl
 - name: microsoft
   symbol: MSFT
-  prices: !inject ${vars.symbol}_prices.yaml
-  <<: !merge common.yaml
+  prices: !use ${vars.symbol}_prices.yaml
+  <<: !update common.yaml
