--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,5 +139,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.14"
+
       - name: Publish doc
         run: make publishdoc
