--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,6 @@ theme:
 #        name: "Switch to dark mode"
 
 plugins:
-#  - markdown-exec
   - mkdocstrings:
       handlers:
         python:
@@ -90,29 +89,28 @@ plugins:
             docstring_options:
               ignore_init_summary: true
             docstring_section_style: spacy
-            docstring_style: numpy
+            docstring_style: "numpy"
             filters: ["!^_"]
             group_by_category: true
             heading_level: 2
-            inherited_members: false  # this only apply to methods and properties, not to pydantic fields
-            members_order: source
+            inherited_members: true  # this only apply to methods and properties, not to pydantic fields
+            members_order: alphabetical  # source
             merge_init_into_class: true
-            separate_signature: true
-            show_category_heading: true
+            separate_signature: false
+            show_category_heading: false   # functions vs property vs etc
             show_if_no_docstring: false
             show_root_full_path: true
             show_root_heading: true
-            show_signature_annotations: false  # redundant as annotations available in parameters section
+#            show_signature_annotations: true  # redundant as annotations available in parameters section
             show_source: true
-            show_symbol_type_heading: true  # sponsors only
-            show_symbol_type_toc: true  # sponsors only
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
             signature_crossrefs: true
             summary: true
+            extensions:
+              - griffe_fieldz:
+                  include_inherited: True
   - mkdocs-video
-
-#  - sear
-#  - snippets
-
 
 
 nav:
@@ -203,7 +201,9 @@ nav:
           - Dashboard: api/models/resources/databricks/dashboard.md
           - DbfsFile: api/models/resources/databricks/dbfsfile.md
           - api/models/resources/databricks/directory.md
-          - DLT Pipeline: api/models/resources/databricks/dltpipeline.md
+          - DLT Pipeline:
+            - api/models/resources/databricks/dltpipeline.md
+            - api/models/resources/databricks/dltpipeline_cluster.md
           - ExternalLocation: api/models/resources/databricks/externallocation.md
           - api/models/resources/databricks/grant.md
           - api/models/resources/databricks/grants.md
