--- a/tests/data/pl-polars-local.yaml
+++ b/tests/data/pl-polars-local.yaml
@@ -52,9 +52,13 @@ nodes:
           renames:
             symbol2: symbol
 
-- name: gld_stock_prices
+- name: slv_stock_prices_tmp
   source:
     node_name: slv_stock_prices
+
+- name: gld_stock_prices
+  source:
+    node_name: slv_stock_prices_tmp
   sinks:
   - format: DELTA
     mode: OVERWRITE
