--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ polars = [
 ]
 spark = [
     "pyarrow",
-    "pyspark[connect]",
+    "pyspark[connect]<4.0",
     "setuptools; python_version >= '3.12'"
 ]
 dev = [
