--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ polars = [
     "polars>=1.0",
     "sqlparse",
 ]
-spark = [
+pyspark = [
     "delta-spark",
     "pyarrow",
     "pyspark[connect]<4.0",
@@ -83,15 +83,6 @@ pulumi = [
 databricks = [
 #    "databricks-connect",  # causing conflicts with local spark installation
     "databricks-sdk",
-]
-
-# Cloud Storage
-azure = [
-    "azure-identity",
-    "azure-storage-blob",
-]
-aws = [
-    "boto3",
 ]
 
 [project.urls]
